# docspider-documents-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-homolog.yml  docker-compose.yml  pyproject.toml
docspider-documents-backend/: manage.py
docspider-documents-backend/apps/: urls.py
docspider-documents-backend/apps/management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
docspider-documents-backend/apps/management/migrations/: 0001_initial.py  0002_documents_filename.py  0003_documents_is_active.py
docspider-documents-backend/backoffice/: asgi.py  settings.py  urls.py  wsgi.py
docspider-documents-backend/utils/: models.py
prometheus/config/: prometheus-prod.yml  prometheus.yml
promtail/config/: promtail-config.yml
